Project_1/Rdubflex_and_EzPz/piazza_tests/check2.rc
function : int main() {
	int x;
	float y;
	bool z;
	const int x1 = 3;
	
	x++;
	y++;
	z++;	//error
	x1++;	//error
	
	x--;
	y--;
	z--;	//error
	x1--;	//error

	++x;
	++y;
	++z;	//error
	++x1;	//error

	--x;
	--y;
	--z;	//error
	--x1;	//error
	
	//small equations
	
	x++ + y++ + x;
	--x--;				//error, result of inc / dec operator is an r-val
	++ +x;				//error, result of unary operator is an r-val
	x++ + -- +y;		//error

}

//note ** that if you're past check 5, itll have 12 errors. the 1 extra will be that the function does not have a return stmt